Fix Scrollbar

--- a/css/outputLab.css
+++ b/css/outputLab.css
@@ -600,10 +600,6 @@ video {
   order: 2;
 }
 
-.order-4 {
-  order: 4;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -620,10 +616,6 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 
 .ml-2 {
@@ -662,16 +654,6 @@ video {
   display: none !important;
 }
 
-.size-12 {
-  width: 3rem;
-  height: 3rem;
-}
-
-.size-8 {
-  width: 2rem;
-  height: 2rem;
-}
-
 .size-10 {
   width: 2.5rem;
   height: 2.5rem;
@@ -706,10 +688,6 @@ video {
   height: 100%;
 }
 
-.h-\[168px\] {
-  height: 168px;
-}
-
 .min-h-52 {
   min-height: 13rem;
 }
@@ -739,20 +717,12 @@ video {
   width: 100%;
 }
 
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-20 {
-  width: 5rem;
+.w-screen {
+  width: 100vw;
 }
 
 .w-16 {
   width: 4rem;
-}
-
-.w-screen {
-  width: 100vw;
 }
 
 .min-w-24 {
@@ -765,10 +735,6 @@ video {
 
 .max-w-screen-2xl {
   max-width: 1536px;
-}
-
-.flex-1 {
-  flex: 1 1 0%;
 }
 
 .rotate-180 {
@@ -816,12 +782,12 @@ video {
   justify-content: space-between;
 }
 
-.justify-items-center {
-  justify-items: center;
-}
-
 .gap-1 {
   gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-3 {
@@ -834,10 +800,6 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .overflow-hidden {
@@ -895,29 +857,19 @@ video {
   border-top-width: 1px;
 }
 
-.border-\[\#1C58EE\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(28 88 238 / var(--tw-border-opacity, 1));
-}
-
-.border-\[\#B3C7F9\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(179 199 249 / var(--tw-border-opacity, 1));
-}
-
 .border-monochromes-grey_xlight {
   --tw-border-opacity: 1;
   border-color: rgb(219 219 219 / var(--tw-border-opacity, 1));
 }
 
-.border-primary-blue_dark {
-  --tw-border-opacity: 1;
-  border-color: rgb(13 58 169 / var(--tw-border-opacity, 1));
-}
-
 .border-primary-blue {
   --tw-border-opacity: 1;
   border-color: rgb(28 88 238 / var(--tw-border-opacity, 1));
+}
+
+.border-primary-blue_dark {
+  --tw-border-opacity: 1;
+  border-color: rgb(13 58 169 / var(--tw-border-opacity, 1));
 }
 
 .border-primary-blue_light {
@@ -940,24 +892,14 @@ video {
   background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
 }
 
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
-}
-
-.bg-brand_blue-bold {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 87 187 / var(--tw-bg-opacity, 1));
-}
-
 .bg-monochromes-grey_xlight {
   --tw-bg-opacity: 1;
   background-color: rgb(219 219 219 / var(--tw-bg-opacity, 1));
 }
 
-.bg-stone-100 {
+.bg-primary-blue {
   --tw-bg-opacity: 1;
-  background-color: rgb(245 245 244 / var(--tw-bg-opacity, 1));
+  background-color: rgb(28 88 238 / var(--tw-bg-opacity, 1));
 }
 
 .bg-transparent {
@@ -969,19 +911,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-primary-blue {
-  --tw-bg-opacity: 1;
-  background-color: rgb(28 88 238 / var(--tw-bg-opacity, 1));
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
 }
 
 .p-3 {
@@ -1044,16 +976,8 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.pl-4 {
-  padding-left: 1rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .pb-4 {
@@ -1062,6 +986,22 @@ video {
 
 .pt-1 {
   padding-top: 0.25rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 
 .text-center {
@@ -1102,19 +1042,14 @@ video {
   font-weight: 700;
 }
 
-.text-\[\#1C58EE\] {
-  --tw-text-opacity: 1;
-  color: rgb(28 88 238 / var(--tw-text-opacity, 1));
-}
-
-.text-blue-800 {
-  --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity, 1));
-}
-
 .text-monochromes-grey {
   --tw-text-opacity: 1;
   color: rgb(113 113 113 / var(--tw-text-opacity, 1));
+}
+
+.text-primary-blue {
+  --tw-text-opacity: 1;
+  color: rgb(28 88 238 / var(--tw-text-opacity, 1));
 }
 
 .text-primary-blue_dark {
@@ -1135,11 +1070,6 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
-}
-
-.text-primary-blue {
-  --tw-text-opacity: 1;
-  color: rgb(28 88 238 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -1192,11 +1122,6 @@ video {
   border-color: transparent;
 }
 
-.hover\:bg-primary-blue_xlight:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 254 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-primary-blue:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(28 88 238 / var(--tw-bg-opacity, 1));
@@ -1205,6 +1130,11 @@ video {
 .hover\:bg-primary-blue_dark:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(13 58 169 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-primary-blue_xlight:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 254 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-white:hover {
@@ -1223,6 +1153,10 @@ video {
     order: 1;
   }
 
+  .sm\:order-2 {
+    order: 2;
+  }
+
   .sm\:order-3 {
     order: 3;
   }
@@ -1231,28 +1165,24 @@ video {
     order: 4;
   }
 
-  .sm\:order-2 {
-    order: 2;
+  .sm\:mb-2 {
+    margin-bottom: 0.5rem;
   }
 
   .sm\:ml-0 {
     margin-left: 0px;
   }
 
-  .sm\:mt-4 {
-    margin-top: 1rem;
-  }
-
-  .sm\:mb-2 {
-    margin-bottom: 0.5rem;
+  .sm\:ml-2 {
+    margin-left: 0.5rem;
   }
 
   .sm\:mr-0 {
     margin-right: 0px;
   }
 
-  .sm\:ml-2 {
-    margin-left: 0.5rem;
+  .sm\:mt-4 {
+    margin-top: 1rem;
   }
 
   .sm\:min-h-52 {
@@ -1263,12 +1193,12 @@ video {
     width: 33.333333%;
   }
 
-  .sm\:w-full {
-    width: 100%;
-  }
-
   .sm\:w-6\/12 {
     width: 50%;
+  }
+
+  .sm\:w-full {
+    width: 100%;
   }
 
   .sm\:basis-full {
@@ -1307,12 +1237,12 @@ video {
     justify-content: center;
   }
 
-  .sm\:p-3 {
-    padding: 0.75rem;
-  }
-
   .sm\:p-0 {
     padding: 0px;
+  }
+
+  .sm\:p-3 {
+    padding: 0.75rem;
   }
 
   .sm\:py-0 {
@@ -1325,19 +1255,9 @@ video {
     order: 2;
   }
 
-  .after\:sm\:block::after {
-    content: var(--tw-content);
-    display: block;
-  }
-
   .sm\:after\:block::after {
     content: var(--tw-content);
     display: block;
-  }
-
-  .sm\:after\:flex::after {
-    content: var(--tw-content);
-    display: flex;
   }
 }
 
@@ -1354,10 +1274,6 @@ video {
     width: 50%;
   }
 
-  .md\:w-3\/12 {
-    width: 25%;
-  }
-
   .md\:min-w-32 {
     min-width: 8rem;
   }
@@ -1372,10 +1288,6 @@ video {
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:items-center {
@@ -1415,10 +1327,6 @@ video {
 
   .lg\:w-2\/12 {
     width: 16.666667%;
-  }
-
-  .lg\:w-3\/12 {
-    width: 25%;
   }
 
   .lg\:w-4\/12 {
